k8n/loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: normal-ass-note-lb
  namespace: normal-ass-note
  labels:
    app.kubernetes.io/name: normal-ass-note
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.63.221
  selector:
    app.kubernetes.io/name: normal-ass-note
  ports:
    - name: http
      port: 80
      targetPort: http
