k8n/tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: normal-ass-note-tailscale
  namespace: normal-ass-note
  # annotations:
  #   tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: normal-ass-note
      port:
        number: 80
  tls:
    - hosts:
        - normal-ass-note
