k8n/traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: normal-ass-note
  namespace: normal-ass-note
spec:
  ingressClassName: traefik
  rules:
    - host: note.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: normal-ass-note
                port:
                  number: 80
